Update README.md
How to set up the configurations to run the application.